syntax = "proto3";

package rpc;

//该go_package选项定义包的导入路径，该路径将包含此文件的所有生成代码。Go 包名称将是导入路径的最后一个路径组件。
option go_package = "./pb";

/** 执行以下脚本生成go文件

protoc --go_out=. --go_opt=paths=source_relative \
    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
    proto/person.proto

 */

/**
生成pb文件
protoc --gofast_out=. person.proto
 */

service PersonSvc {
  rpc PersonList (PersonListRequest) returns (PersonListResponse) {}
}

message PersonListRequest{
  string name=1;
  int32 age=2;
}

message PersonListResponse{
  repeated Person people = 1;
  int32 count = 2;
}

message Person {
  int32 id =1;
  string name=2;
  int32 age=3;
}




